Improve Day 6